--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,29 +30,51 @@
 
     <Button
         android:id="@+id/btnScan"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
+        android:layout_width="348dp"
+        android:layout_height="65dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="305dp"
-        android:background="@android:color/holo_green_light"
-        android:backgroundTint="@android:color/holo_green_light"
-        android:backgroundTintMode="add"
-        android:text="Сканировать билеты" />
+        android:layout_marginBottom="302dp"
+        android:backgroundTint="@color/green"
+        android:text="Сканировать билеты"
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="389dp"
+        android:layout_height="287dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="8dp"
         android:src="@drawable/avia" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="373dp"
-        android:layout_height="288dp"
+        android:layout_width="299dp"
+        android:layout_height="209dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="262dp"
+        android:layout_marginBottom="314dp"
         android:src="@drawable/cabinet" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="382dp"
+        android:layout_height="95dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="-99dp"
+        android:layout_marginBottom="588dp"
+        android:fontFamily="sans-serif-black"
+        android:text="Личный кабинет"
+        android:textColor="#4CAF50"
+        android:textSize="20sp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="252dp"
+        android:layout_height="96dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="138dp"
+        android:layout_marginBottom="494dp"
+        android:src="@drawable/user" />
 
 </RelativeLayout>
